examples/datalog/40_load_command/04_load_nonexistent_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_load_error
Knowledge graph 'test_load_error' created.
Switched to knowledge graph: test_load_error
> .kg use test_load_error
Switched to knowledge graph: test_load_error
> .load examples/datalog/nonexistent_file_that_does_not_exist.dl
Loading file: examples/datalog/nonexistent_file_that_does_not_exist.dl
Script error: Failed to read script 'examples/datalog/nonexistent_file_that_does_not_exist.dl': No such file or directory (os error 2)
