examples/datalog/40_load_command/04_load_nonexistent_error.dl
% Test: .load Nonexistent File Error
% Category: Load Command
% Description: Tests error handling when loading a file that doesn't exist

.kg create test_load_error
.kg use test_load_error

% Try to load a file that doesn't exist - should produce an error
.load examples/datalog/nonexistent_file_that_does_not_exist.dl

% Cleanup
.kg use default
.kg drop test_load_error
